
	* Gauntlets of power give +7 damage bonus to differentiate
	  from 18/** (from SporkHack)

	* New option: bones: allow player control of loading bones (partly
	  from NAO)

	* user interface improvements:
	  - Monster Targeting v1.2 (by Pasi Kallinen)
	  - Changed 'C' to present a menu (from NAO)
	  - Hiding useless options in TTY mode

	* bug fixes:
	  - Fixed crash when player polyed into gold dragon because of wearing
	    a gold dragon armor and a bones file gets written and the gold
	    armor gets removed during bones trimming
	  - replace "dungeon" when applying drum of earthquake with
	    appropriate description depening on branch or level

	* vanilla bug fixes:
	  - C343-72:  You get confusing messages when you stop levitating
	              while on a flying steed. (by Edoardo Spadolini)
	  - C343-174: Drum of earthquake gives inappropriate message if hero
	              or monster is in a pit.

2011-10-08  UnNetHack 3.6.0
	* changing color of monster with config line:
	  MONSTERCOLOR=acid blob:lightcyan
	* HTML dump: output IBMgraphics and DECgraphics characters
	* Multiple bones files per level (not on Win32)
	* Autoconf compliant installation directory variables
	* added new tiles and fixed building of 16x16 tiles (by Stephan T. Lavavej)
	* Curses GUI updated to last version
	* Giantslayer grants STR 18/** when wielded
	* Simple hint mode
	* New config option for changing order of spells in spell menu:
	  SPELLORDER=ZzqwertuiopasdfghjklyxcvbnmQWERTUIOPASDFGHJKLYXCVBNM
	* Hallucination: fictional currencies

	* more candles:
	  - lighting shop in orcus town
	  - Gnomes get candles (more likely in dark mines) (from AceHack)

	* patches:
	  - DYWYPISI? (adds identification details to dump) (by Jafet)
	  - Grudge (some NPC monsters attacking each other) (by Nephi)
	  - MSGTYPE option (by Pasi Kallinen)
	  - Sortloot (by Jukka Lahtinen)
	    * changed to sort by description, BUC and more
	  - Quiver Fired Ammunition (by Jukka Lahtinen)
